Contrast summary fix (#12)
* material icons + styling kontrast summary

* align items center

--- a/src/components/contrastSummary/contrastSummary.css
+++ b/src/components/contrastSummary/contrastSummary.css
@@ -1,22 +1,34 @@
-.colorBox {
-    margin: 0
-}
-
-.contrastSummary{
+.contrastSummary {
     width: 14rem;
     background-color: #f0f0f0;
     padding: 1rem;
     height: fit-content;
 }
 
+.contrastSummaryHeading {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+  
+}
+
+.contrastSummaryHeadingFont{
+    font-size: 14px;
+    font-weight: normal;
+    margin: 0;
+}
+
 .contrastSummaryList {
     padding: 0;
     margin: 0.1rem;
     flex-wrap: wrap;
+    min-height: 40px;
+    align-items: center;
 }
 
-.contrastSummaryHeading {
-    font-size: 14px;
-    font-weight: normal;
-    margin: 0;
+.contrastSummaryListItem{
+    padding: 0;
+    margin: .3rem .3rem .3rem .3rem;
 }
